syntax = "proto3";

package myapp.v1;

option go_package = "github.com/solists/test_ci/pkg/pb/myapp/v1";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
//import "google/protobuf/struct.proto";
//import "google/protobuf/timestamp.proto";

message ErrorResponse {
  google.protobuf.Empty data = 1;
  Error error = 2;
}

message Error {
  int64 code = 1;
  string message = 2;
}


service TgService {
  rpc GetQuery(GetQueryRequest) returns (GetQueryResponse) {
    option (google.api.http) = {
      post: "/api/v1/query/get"
      body: "*"
    };
  }
  rpc Hello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/api/v1/hello"
      body: "*"
    };
  }
}

message GetQueryRequest {
  int64 user_id = 1;
  repeated PromptMessage messages = 2;
}

message PromptMessage {
  string message = 1;
}

message GetQueryResponse {
  string result = 1;
}

message HelloRequest {}

message HelloResponse {
  string result = 1;
}